Fixed the situation in which if there were no albums in the database, randomizer raised an error. Also modified the welcome page to use Django's built-in feature for using mod operation in templates, which makes the template library currently unnecessary. The welcome page is modified so that if there are no albums, the latest albums listing and the random picks listing won't be visible at all, and the tab panel fills the underside of the banner image.
This commit contains some parts of implementation of Move to shopping cart -button.

--- a/Albumizer/src/Albumizer/albumizer/static/css/albumizer.css
+++ b/Albumizer/src/Albumizer/albumizer/static/css/albumizer.css
@@ -140,8 +140,11 @@ img {
 
 #welcomePageMainContent {
   float:                     left;
-  width:                     68em;
   margin-bottom:             1em;
+}
+
+#welcomePageMainContent.hasWidth {
+  width:                     68em;
 }
 
 .welcomePageIntroductionTabHeading {
@@ -216,6 +219,7 @@ img {
 
 #welcomePageRandomAlbumsTable td {
 	vertical-align:            top;
+	text-align:                center;
 	padding-bottom:            2em;
 }
 
